[gd_scene load_steps=38 format=2]

[ext_resource path="res://assets/sprites/wade/immobile/down.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/wade/running/n_shooting_down.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/wade/running/n_shooting_left_right.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/wade/running/shooting_up.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/wade/running/y_shooting_left_right.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/wade/running/y_shooting_down.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/wade/immobile/left_right.png" type="Texture" id=8]
[ext_resource path="res://src/util/DamagePlayer.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/util/TextureProgress.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 41 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 58, 0, 58, 80 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 116, 0, 58, 80 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 174, 0, 58, 80 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 58, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 60, 0, 60, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 60, 80 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 60, 80 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 80 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 80 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "running_up",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "shooting_running_left_right",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "shooting_running_down",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "shooting_idle_left_right",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "running_left_right",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ) ],
"loop": true,
"name": "idle_left_right",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "running_down",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "shooting_idle_down",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 11
script = ExtResource( 2 )

[node name="ColissionShape2D" type="CollisionShape2D" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 27 )
animation = "idle_down"

[node name="BulletPositions" type="Node2D" parent="."]

[node name="Down" type="Position2D" parent="BulletPositions"]
position = Vector2( 0, 45 )

[node name="Left" type="Position2D" parent="BulletPositions"]
position = Vector2( -30, 0 )

[node name="Right" type="Position2D" parent="BulletPositions"]
position = Vector2( 30, 0 )

[node name="Up" type="Position2D" parent="BulletPositions"]
position = Vector2( 0, -45 )

[node name="TimerShoot" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DamagePlayer" parent="." instance=ExtResource( 9 )]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 1300
limit_bottom = 720

[node name="TextureProgress" parent="." instance=ExtResource( 10 )]
[connection signal="timeout" from="TimerShoot" to="." method="_on_TimerShoot_timeout"]
